[gd_scene load_steps=17 format=3 uid="uid://1h3sbkjiimxw"]

[ext_resource type="Script" path="res://scenes/game/gameobjects/autostitcher.gd" id="1"]
[ext_resource type="PackedScene" path="res://scenes/game/effects/blood_spray.tscn" id="2_33nva"]
[ext_resource type="PackedScene" path="res://models/autostitcher/mdl-autostitcher.tscn" id="3"]
[ext_resource type="AudioStream" uid="uid://dt63b0m7jp7u6" path="res://assets/audio/autostitcher/autostitcher_heal_loop.wav" id="4"]
[ext_resource type="PackedScene" uid="uid://c7qyybqvmlu5y" path="res://scenes/game/gameobjects/interactables/hint_object_interface.tscn" id="4_71k1s"]
[ext_resource type="AudioStream" uid="uid://d4khbrqy67d41" path="res://assets/audio/autostitcher/autostitcher_hit.wav" id="5"]
[ext_resource type="PackedScene" path="res://scenes/game/sound/sound_queue_3d.tscn" id="6"]

[sub_resource type="Animation" id="8"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("obj-autostitcher-arm-01:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("obj-autostitcher-arm-02:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("obj-autostitcher-arm-03:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("obj-autostitcher-arm-04:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="10"]
resource_name = "active"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("obj-autostitcher-arm-01:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.5, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(15, 0, 0), Vector3(30, 0, 0), Vector3(-15, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("obj-autostitcher-arm-02:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.6, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(15, 0, 0), Vector3(-8.53774e-07, 0, 0), Vector3(30, 0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("obj-autostitcher-arm-03:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.4, 0.5, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(15, 0, 0), Vector3(30, 0, 0), Vector3(-3.41509e-06, 0, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("obj-autostitcher-arm-04:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.3, 0.6, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(15, 0, 0), Vector3(30, 0, 0), Vector3(-15, 0, 0)]
}

[sub_resource type="Animation" id="9"]
resource_name = "idle"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("obj-autostitcher-arm-01:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("obj-autostitcher-arm-02:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("obj-autostitcher-arm-03:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("obj-autostitcher-arm-04:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_wckwd"]
_data = {
"RESET": SubResource("8"),
"active": SubResource("10"),
"idle": SubResource("9")
}

[sub_resource type="BoxShape3D" id="1"]
size = Vector3(1, 1, 0.5)

[sub_resource type="BoxShape3D" id="3"]
size = Vector3(1.5, 5, 2)

[sub_resource type="Animation" id="6"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/HintObjectInterface/CanvasModulate:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="7"]
resource_name = "fade_in"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/HintObjectInterface/CanvasModulate:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_2gkv8"]
_data = {
"RESET": SubResource("6"),
"fade_in": SubResource("7")
}

[node name="autostitcher" type="StaticBody3D" node_paths=PackedStringArray("anim_player")]
collision_layer = 2
collision_mask = 8
script = ExtResource("1")
blood_effect = ExtResource("2_33nva")
anim_player = NodePath("CanvasLayer/HintObjectInterface/AnimationPlayer")

[node name="mdl_autostitcher" parent="." instance=ExtResource("3")]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0, 0)

[node name="AnimationPlayer" type="AnimationPlayer" parent="mdl_autostitcher"]
libraries = {
"": SubResource("AnimationLibrary_wckwd")
}
autoplay = "idle"

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0.3)
shape = SubResource("1")

[node name="Area3D" type="Area3D" parent="."]
collision_layer = 8
collision_mask = 0

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1)
shape = SubResource("3")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="HintObjectInterface" parent="CanvasLayer" instance=ExtResource("4_71k1s")]

[node name="CanvasModulate" parent="CanvasLayer/HintObjectInterface" index="0"]
color = Color(1, 1, 1, 0)

[node name="TitleLabel" parent="CanvasLayer/HintObjectInterface/HBoxContainer/VBoxContainer" index="0"]
text = "autostitcher
use to spend 50 bones to heal
use again while healing to cure all pox"

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer/HintObjectInterface"]
root_node = NodePath("../../..")
libraries = {
"": SubResource("AnimationLibrary_2gkv8")
}

[node name="Timer" type="Timer" parent="."]

[node name="HealingLoop" type="AudioStreamPlayer3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1.02822)
stream = ExtResource("4")
bus = &"SoundFX"

[node name="SoundQueue3D" parent="." instance=ExtResource("6")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1)
Count = 4

[node name="HitSound" type="AudioStreamPlayer3D" parent="SoundQueue3D"]
stream = ExtResource("5")
bus = &"SoundFX"

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]

[editable path="mdl_autostitcher"]
[editable path="CanvasLayer/HintObjectInterface"]
